Stable versions
---------------

4.0.3 ():
	- fix IT pan setting effect (reported by Jan Engelhardt)
	- fix MED BPM mode tempo setting

4.0.2 (20130223):
	- add IT volume column vibrato
	- add IT pattern row delay effect
	- add fine global volume slide effect
	- fix IT instrument vibrato depth and sweep
	- fix IT past note effects
	- fix IT fadeout values
	- fix IT fadeout event loading
	- fix period range for values lower than 8
	- fix global volume slides
	- fix channel volume setting
	- fix multi-retrig effect counter
	- fix invalid sample number access
	- fix memory access violation in MMCMP depacker
	- fix global volume setting in module scan
	- reset virtual channel flags on creation
	- change maximum number of mixer voices to 128

4.0.1 (20130216):
	- fix license issues reported by Jan Engelhardt
	- minor documentation updates

4.0.0 (20130213):
	- split library and application in different packages
	- remove OSS sequencer support
	- remove platform-specific device drivers
	- remove all global data, make library code fully thread-safe
	- remove configuration files (moved to front-end)
	- remove support to uLaw-encoded output
	- remove bogus lzma file detection (by Bodo Thiesen)
	- extend note range to full 10-octave range
	- extensive code refactoring
	- rewrite MMCMP decompressor to be endian-safe
	- replaced IT sample decompressor with public domain version
	- add cubic spline sample interpolation
	- add built-in zip file decompressor
	- add built-in gzip file decompressor
	- add built-in compress file decompressor
	- add built-in bzip2 file decompressor
	- add built-in xz file decompressor
	- add built-in lha file decompressor
	- add built-in vorbis sample decoder
	- add support to IT envelope carry
	- add support to IT sample vibrato
	- add ASYLUM Music Format V1.0 loader
	- add regression tests
	- fix interpolation and sample loop processing
	- fix S404 depacker integration
	- fix note delay effect
	- fix FT2 old instrument volume quirk